@@ -46,7 +46,6 @@
 #define MONGOC_URI_JOURNAL "journal"
 #define MONGOC_URI_LOADBALANCED "loadbalanced"
 #define MONGOC_URI_LOCALTHRESHOLDMS "localthresholdms"
-#define MONGOC_URI_MAXIDLETIMEMS "maxidletimems"
 #define MONGOC_URI_MAXPOOLSIZE "maxpoolsize"
 #define MONGOC_URI_MAXSTALENESSSECONDS "maxstalenessseconds"
 #define MONGOC_URI_MINPOOLSIZE "minpoolsize"
@@ -74,7 +73,6 @@
 #define MONGOC_URI_TLSDISABLECERTIFICATEREVOCATIONCHECK "tlsdisablecertificaterevocationcheck"
 #define MONGOC_URI_TLSDISABLEOCSPENDPOINTCHECK "tlsdisableocspendpointcheck"
 #define MONGOC_URI_W "w"
-#define MONGOC_URI_WAITQUEUEMULTIPLE "waitqueuemultiple"
 #define MONGOC_URI_WAITQUEUETIMEOUTMS "waitqueuetimeoutms"
 #define MONGOC_URI_WTIMEOUTMS "wtimeoutms"
 #define MONGOC_URI_ZLIBCOMPRESSIONLEVEL "zlibcompressionlevel"
